cmake_minimum_required(VERSION 3.10)

project(CarProject VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_CXX_FLAGS "-Wno-deprecated-declarations -Wall -Werror -Wnon-virtual-dtor -Woverloaded-virtual")

enable_testing()
add_subdirectory(src)
add_subdirectory(tests)