SET(INCLUDE ${CMAKE_SOURCE_DIR}/include)

FILE(GLOB_RECURSE SOURCE "*.cpp")
LIST(REMOVE_ITEM SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp)
LIST(REMOVE_ITEM SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

ADD_COMPILE_OPTIONS("-Wall")
ADD_COMPILE_OPTIONS("-Werror")
ADD_LIBRARY(executor ${SOURCE})

TARGET_INCLUDE_DIRECTORIES(executor PUBLIC 
"${INCLUDE}"
"${INCLUDE}/command"
"${INCLUDE}/core"
)
